--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,11 @@
         "simple-bus/asynchronous-bundle": "~3.0",
         "simple-bus/asynchronous": "~3.0",
         "bernard/bernard-bundle": "2.0.*@dev",
-        "bernard/bernard": "1.0.*@dev"
+        "bernard/bernard": "1.0.*@dev",
+        "symfony/config": "^2.7|^3.0|^4.0",
+        "symfony/dependency-injection": "^2.7|^3.0|^4.0",
+        "symfony/http-kernel": "^2.7|^3.0|^4.0",
+        "symfony/event-dispatcher": "^2.7|^3.0|^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
