--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
         "simple-bus/asynchronous": "~3.0",
         "bernard/bernard-bundle": "2.0.*@dev",
         "bernard/bernard": "1.0.*@dev",
-        "symfony/config": "^2.7|^3.0|^4.0",
-        "symfony/dependency-injection": "^2.7|^3.0|^4.0",
-        "symfony/http-kernel": "^2.7|^3.0|^4.0",
-        "symfony/event-dispatcher": "^2.7|^3.0|^4.0"
+        "symfony/config": "^2.8|^3.0|^4.0",
+        "symfony/dependency-injection": "^2.8|^3.0|^4.0",
+        "symfony/http-kernel": "^2.8|^3.0|^4.0",
+        "symfony/event-dispatcher": "^2.8|^3.0|^4.0",
+        "symfony/var-dumper": "^2.8|^3.0|^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
